feat(buttton.scss): create styles for new component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
 @import "./base.scss";
 @import "./components/game-container.scss";
+@import "./components/game-screen.scss";
+@import "./components/game-settings.scss";
+@import "./components/button.scss";
+@import "./components/frame.scss";
 @import "./components/menu.scss";
 @import "./components/main-screen.scss";
