--- a/src/styles/components/game-container.scss
+++ b/src/styles/components/game-container.scss
@@ -1,7 +1,6 @@
 .game-container {
-  width: 80vw;
-  height: 80vh;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
-  padding-top: 10vh;
-  padding-left: 10vw;
+  padding: 10vh 10vw;
 }
