--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -8,11 +8,16 @@
   font-size: 2rem;
   cursor: pointer;
 
-  &:hover {
-    color:#f00;
-  }
-
   &:not(:last-child) {
     margin-bottom: 1rem;
+  }
+}
+
+.menu__link {
+  color: #fff;
+  text-decoration: none;
+
+  &:hover {
+    color:#f00;
   }
 }
