--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 @import "./components/game-screen.scss";
 @import "./components/game-settings.scss";
 @import "./components/button.scss";
+@import "./components/card.scss";
 @import "./components/frame.scss";
 @import "./components/menu.scss";
 @import "./components/main-screen.scss";
+@import "./components/score-board.scss";
