--- a/src/styles/components/game-screen.scss
+++ b/src/styles/components/game-screen.scss
@@ -10,6 +10,8 @@
 }
 
 .game-screen__frame {
+  display: flex;
+  justify-content: center;
   flex: 0 0 75%;
   max-width: 75%;
 }
@@ -17,4 +19,5 @@
 .game-screen__scoreboard {
   flex: 0 0 15%;
   max-width: 15%;
+  padding-top: 20vh;
 }
