feat(styles): add styles for nw component cardclip

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -2,11 +2,19 @@
   display: flex;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .card__wrapper {
+  display: flex;
   flex-grow: 1;
   border-radius: 1rem;
   background: rgb(132,195,34);
   background: linear-gradient(0deg, rgba(132,195,34,1) 0%, rgba(45,253,139,1) 100%);
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  padding: 10%;
 }
