--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import "./components/menu.scss";
 @import "./components/main-screen.scss";
 @import "./components/score-board.scss";
+@import "./containers/card-flip.scss";
