--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -5,7 +5,7 @@
   background: transparent;
   cursor: pointer;
 
-  &--round {
+  &--icon {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
@@ -37,16 +37,10 @@
     }
   }
 
-  &--round {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
+  &--icon {
+    display: block;
+    width: 27px;
+    height: 27px;
+    margin: 0 auto;
   }
 }
