--- a/src/styles/components/game-screen.scss
+++ b/src/styles/components/game-screen.scss
@@ -16,7 +16,7 @@
   max-width: 75%;
 }
 
-.game-screen__scoreboard {
+.game-screen__timer {
   flex: 0 0 15%;
   max-width: 15%;
   padding-top: 20vh;
