feat(HighScoreTable): create new component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,5 +7,6 @@
 @import "./components/frame.scss";
 @import "./components/menu.scss";
 @import "./components/main-screen.scss";
-@import "./components/score-board.scss";
+@import "./components/timer.scss";
 @import "./containers/card-flip.scss";
+@import "./components/high-score-table.scss";
