feat(index.scss, end-game.scss, game-container.scss): add min and max width on game-container, styles for new component end-game

--- a/src/styles/components/game-container.scss
+++ b/src/styles/components/game-container.scss
@@ -1,6 +1,8 @@
 .game-container {
   width: 100vw;
   height: 100vh;
+  min-width: 1100px;
+  max-width: 2000px;
   margin: 0;
   padding: 10vh 10vw;
 }
