--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./components/game-settings.scss";
 @import "./components/button.scss";
 @import "./components/card.scss";
+@import "./components/end-game.scss";
 @import "./components/frame.scss";
 @import "./components/menu.scss";
 @import "./components/main-screen.scss";
